--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ getopts = "0.2"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 uuid = { version = "0.8", features = [ "serde", "v4" ] }
+digest = "0.9"
+md-5 = "0.9"
+sha-1 = "0.9"
