--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ getopts = "0.2"
 glob = "0.3"
 jmclib = { "git" = "https://github.com/jclulow/rust-jmclib" }
 libc = "0.2"
+libdevinfo-sys = "1"
 md-5 = "0.9"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
